fixed scrollbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 input:focus,
 select:focus,
 textarea:focus,
@@ -128,6 +132,37 @@ a {
   filter: invert(68%) sepia(89%) saturate(406%) hue-rotate(85deg) brightness(85%) contrast(86%);
 }
 
+/*scrollbar styles for desktop*/
+@media only screen and (min-width: 824px) {
+  ::-webkit-scrollbar {
+    background-color:#fff;
+    width: 8px;
+    border-radius:16px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background-color:#bbb;
+    border-radius:16px;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background-color:#babac0;
+    border-radius:16px;
+    border:4px solid #888;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
+  ::-webkit-scrollbar-button {
+    display:none
+  }
+}
+
 @media only screen and (max-width: 610px) {
   nav img {
     width: 32px;
@@ -136,6 +171,19 @@ a {
   }
 
   .project-paragraph  {
+    font-size: 14px;
+  }
+
+  .footer-link, footer div span {
+    margin-right: 16px;
+    margin-left: 16px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
+
+  p {
     font-size: 14px;
   }
 }
